--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>second Protfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 
 </head>
+
 <body>
-    <div class="c1">
-        <div class="c2">
+
+
+    <section>
+        <div class="box1">
+
             <h1>Welcome To </h1>
-            <h1>Lupin World</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi dolores delectus ipsa facilis doloremque molestias, velit incidunt est repudiandae. Quibusdam blanditiis ratione dolores rerum. Quo temporibus modi pariatur unde at veniam nulla voluptatibus? Quos, inventore sed fuga magni minus, soluta minima iste ipsum odit consequuntur iure non quasi et pariatur.</p>
+            <h1> <span class="or">Lupin</span> World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi dolores delectus ipsa facilis doloremque
+                molestias, velit incidunt est repudiandae. Quibusdam blanditiis ratione dolores rerum. Quo temporibus
+                modi pariatur unde at veniam nulla voluptatibus? Quos, inventore sed fuga magni minus, soluta minima
+                iste ipsum odit consequuntur iure non quasi et pariatur.</p>
 
-            <a href="#">Hireme</a>
-
-
+            <a target="_blank" href="https://www.linkedin.com/in/khodezatul-kobra-khodeza-852a14184">Hireme</a>
         </div>
-        <div class="c3">
+        <div class="box2">
+
             <img src="./picture/my-bg.png" alt="picture">
-
         </div>
+    </section>
 
-
-    </div>
-
-
-
-    
 </body>
+
 </html>
