--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <section>
+    <section class="main">
         <div class="box1">
 
             <h1>Welcome To </h1>
@@ -27,7 +27,7 @@
                 modi pariatur unde at veniam nulla voluptatibus? Quos, inventore sed fuga magni minus, soluta minima
                 iste ipsum odit consequuntur iure non quasi et pariatur.</p>
 
-            <a target="_blank" href="https://www.linkedin.com/in/khodezatul-kobra-khodeza-852a14184">Hireme</a>
+            <a target="_blank" href="https://www.linkedin.com/in/khodezatul-kobra-khodeza-852a14184">Hire me</a>
         </div>
         <div class="box2">
 
