--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
         </div>
     </section>
 
+
+    <section class="main2">
+        <div class="b1">
+            <img src="./picture/my-bg.png" alt="picture">
+        </div>
+        <div class="b2">
+            <h1>Dream Big</h1>
+            <h5>Become a web developer</h5>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="#">Download Resume</a>
+
+        </div>
+
+
+
+    </section>
+
+
+
 </body>
 
 </html>
