--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <section class="main">
+    <section class="main flexbal">
         <div class="box1">
 
             <h1>Welcome To </h1>
@@ -36,7 +36,7 @@
     </section>
 
 
-    <section class="main2">
+    <section class="main2 flexbal">
         <div class="b1">
             <img src="./picture/my-bg.png" alt="picture">
         </div>
@@ -48,6 +48,38 @@
             <a href="#">Download Resume</a>
 
         </div>
+
+
+
+    </section>
+
+    <section class="therd">
+
+        <h2>Experiences</h2>
+        <div class="flexbal">
+            <div class="a ">
+                <h1>Full Stack Web Developer</h1>
+                <h4 class="colo">2021-Present | Pro Level Developer</h4>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+
+            </div>
+            <div class="b ">
+                <h1>Baby Web Developer</h1>
+                <h4 class="colo">2020-2021 | Programming Hero Learner</h4>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+
+            </div>
+        </div>
+
 
 
 
